Add confirmation window to template

--- a/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
+++ b/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
@@ -32,4 +32,5 @@
   </article>
   <about-edit-window></about-edit-window>
   <about-delete-window (notify)="removePerson($event)"></about-delete-window>
+  <about-confirm-window></about-confirm-window>
 </section>
