--- a/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
+++ b/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
@@ -17,7 +17,7 @@
     <span class="row justify-content-around"
       ><button
         class="btn btn-primary w-25 mb-3"
-        (click)="showEditWindow(person.name)"
+        (click)="showEditWindow(person)"
       >
         EDYTUJ OSOBĘ</button
       ><button class="btn btn-danger w-25 mb-3" (click)="showDeleteWindow()">
