--- a/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
+++ b/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
@@ -53,11 +53,14 @@
         class="delete_icon"
         src="../../../../../assets/img/icons/circle_delete.svg"
         alt="delete_icon"
-        (click)="deleteImage(picture, imageTitles[i])"
+        (click)="openDeleteWindow(picture, imageTitles[i])"
       />
       <div class="">
         <span>{{ imageTitles[i] }}</span>
       </div>
     </div>
   </div>
+  <gallery-editor-delete-window
+    (notify)="deleteImage($event['url'], $event['title'])"
+  ></gallery-editor-delete-window>
 </div>
