Implement savePerson notification Correct name pattern verification Show picture or add picture input in edit person form

--- a/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
+++ b/src/app/admin-panel/admin-home/about-editor/about-editor.component.html
@@ -28,7 +28,7 @@
       </button></span
     >
   </article>
-  <about-edit-window></about-edit-window>
+  <about-edit-window (notifyMe)="savePerson($event)"></about-edit-window>
   <about-delete-window (notify)="removePerson($event)"></about-delete-window>
   <about-confirm-window></about-confirm-window>
 </section>
