--- a/src/app/admin-panel/admin-home/about-editor/edit-window/edit-window.component.html
+++ b/src/app/admin-panel/admin-home/about-editor/edit-window/edit-window.component.html
@@ -2,28 +2,28 @@
   <div class="modal-header">
     <h4 class="modal-title pull-left">
       <span *ngIf="person.name.length > 0; else elseBlock"
-        >"{{ personCopy.name }}" - EDYCJA</span
+        >{{ personCopy.name }} - EDYCJA</span
       >
       <ng-template #elseBlock>NOWA OSOBA</ng-template>
     </h4>
   </div>
   <div class="modal-body container">
     <div class="row justify-content-start m-3 font-weight-bold">
-      <form id="editForm" #editForm="ngForm" (ngSubmit)="saveInfo($event)">
+      <form id="editForm" #editForm="ngForm" (ngSubmit)="clickSave()">
         <div class="form-group">
           <label for="personName">Imię i nazwisko</label>
           <input
-            ngModel
             type="text"
             class="form-control"
             id="personName"
             name="personName"
             [(ngModel)]="personCopy.name"
+            #personName="ngModel"
             required
-            pattern="\p{L}* \p{L}*"
+            pattern="[A-ZŁŚ][a-ząęółśżźćń]{1,} [A-ZŁŚ][a-ząęółśżźćń]{1,}"
           />
           <alert
-            *ngIf="editForm.touched && !editForm.controls.personPosition.valid"
+            *ngIf="editForm.touched && !editForm.controls.personName.valid"
             type="danger"
           >
             <div>
@@ -34,12 +34,12 @@
         <div class="form-group">
           <label for="personPosition">Stanowisko</label>
           <input
-            ngModel
             type="text"
             class="form-control"
             id="personPosition"
             name="personPosition"
             [(ngModel)]="personCopy.position"
+            #personPosition="ngModel"
             required
             minlength="3"
           />
@@ -55,7 +55,6 @@
         <div class="form-group">
           <label for="personRank">Ranga (1-2-3)</label>
           <input
-            ngModel
             type="range"
             min="1"
             max="3"
@@ -63,20 +62,23 @@
             id="personRank"
             name="personRank"
             [(ngModel)]="personCopy.rank"
+            #personRank="ngModel"
             required
           />
         </div>
-        <div class="form-group">
+        <div
+          *ngIf="!personCopy.image.length > 0; else showPic"
+          class="form-group"
+        >
           <label for="personImage">Zdjęcie</label>
           <input
             ngModel
+            #personImage="ngModel"
             type="file"
             class="form-control"
             id="personImage"
             name="personImage"
-            [(ngModel)]="personCopy.image"
-            accept="image/png, image/jpeg"
-            (change)="uploadFile($event, title.value)"
+            accept="image/png, image/jpeg, image/svg"
             required
           />
           <alert
@@ -88,10 +90,24 @@
             </div>
           </alert>
         </div>
+        <ng-template #showPic class="container justify-content-center">
+          <div class="row justify-content-center">
+            <img
+              class="col picture"
+              src="{{ personCopy.image }}"
+              alt="person"
+            />
+            <img
+              class="col delete_icon"
+              src="../../../../../assets/img/icons/circle_delete.svg"
+              alt="delete_icon"
+              (click)="deleteImage()"
+            />
+          </div>
+        </ng-template>
         <div class="form-group">
           <label for="personDescription">Opis</label>
           <textarea
-            ngModel
             type="text"
             class="form-control"
             id="personDescription"
@@ -99,6 +115,7 @@
             cols="80"
             rows="10"
             [(ngModel)]="personCopy.description"
+            #personDescription="ngModel"
             required
             minlength="10"
             placeholder="Tutaj wpisz treść"
