Add confirm window to template

--- a/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
+++ b/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
@@ -63,4 +63,5 @@
   <gallery-editor-delete-window
     (notify)="deleteImage($event['url'], $event['title'])"
   ></gallery-editor-delete-window>
+  <about-confirm-window></about-confirm-window>
 </div>
