Add confirm window to display error message

--- a/src/app/admin-panel/admin-home/gallery-editor/gallery-editor.component.html
+++ b/src/app/admin-panel/admin-home/gallery-editor/gallery-editor.component.html
@@ -66,4 +66,5 @@
       (notify)="removeGallery($event)"
     ></app-subgallery-editor>
   </div>
+  <about-confirm-window></about-confirm-window>
 </div>
