Implement adding/update'ing new person to about section

--- a/src/app/admin-panel/admin-home/about-editor/edit-window/edit-window.component.html
+++ b/src/app/admin-panel/admin-home/about-editor/edit-window/edit-window.component.html
@@ -79,6 +79,7 @@
             id="personImage"
             name="personImage"
             accept="image/png, image/jpeg, image/svg"
+            (change)="uploadFile($event)"
             required
           />
           <alert
